# sib-nota

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
debian/: changelog  control
include/: Makefile.am  Makefile.in  kp_server.h  nota_rm_handler.h  rm_m3_defs.h  sib_handler.h  sib_maxfd.h
src/: Makefile.am  Makefile.in  NoTA_System_ResourceMng_R01_01_common.h  NoTA_System_ResourceMng_R01_01_user.c  NoTA_System_ResourceMng_R01_01_user.h  NoTA_System_ResourceMng_R01_01_v03.xml  SibAccessNota_common.h  SibAccessNota_service.c  SibAccessNota_service.h  kp_server.c  main.c  nota_rm_handler.c  sib_handler.c  sib_maxfd.c
